refactor : update method of book